<resources>
    <string name="app_name">Socially</string>
    <string name="from_text">from</string>
    <string name="smd_text">SMD</string>
    <string name="socially_text">Socially</string>
    <string name="create_an_account_and_sign_up">Create an Account and Sign Up</string>
    <string name="username">Username</string>
    <string name="your_name">Your name</string>
    <string name="your_last_name">Your Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="user123">user123</string>
    <string name="john">john</string>
    <string name="doe">doe</string>
    <string name="_20_05_2005">20-05-2005</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="create_an_account">Create an Account</string>
    <string name="jacob_w">jacob_w</string>
    <string name="log_in">Log in</string>
    <string name="switch_accounts">Switch Accounts</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="your_story">Your Story</string>
    <string name="karennne">karennne</string>
    <string name="zackjohn">zackjohn</string>
    <string name="kieron_d">kieron_d</string>
    <string name="joshua_i">joshua_I</string>
    <string name="tokyo_japan">Tokyo, Japan</string>
    <string name="liked_by">Liked by</string>
    <string name="craig_love">craig_love</string>
    <string name="and">and</string>
    <string name="joshua_caption"><b>joshua_I</b> The game in Japan was amazing and I want to share some photos</string>
    <string name="now">• now</string>
    <string name="have_a_nice_day_bro">Have a nice day, bro!</string>
    <string name="camera">Camera</string>
    <string name="shop">Shop</string>
    <string name="search">Search</string>
    <string name="style">Style</string>
    <string name="sports">Sports</string>
    <string name="auto">Auto</string>
    <string name="music">Music</string>
    <string name="internshala">internshala</string>
    <string name="clear">Clear</string>
    <string name="internshalastudentpartner">internshalastudentpartner</string>
    <string name="internshala_b_610_untech_business_zone">Internshala, B-610, Untech Business Zone,...</string>
    <string name="_500_post">500+ post</string>
    <string name="internshala_cap">Internshala</string>
    <string name="internshala_nomoretheory_challenge">#internshala_nomoretheory_challenge</string>
    <string name="_1000_post">1000+ post</string>
    <string name="hash_internshala">#internshala</string>
    <string name="internshalaincampus">internshalaincampus</string>
    <string name="_100_post">100+ post</string>
    <string name="_15m">• 15m</string>
    <string name="kiero_d">kiero_d</string>
    <string name="_1m">• 1m</string>
    <string name="_20m">• 20m</string>
    <string name="_2h">• 2h</string>
    <string name="thank_you_bro">Thank you, bro!</string>
    <string name="maxjacobson">maxjacobson</string>
    <string name="the_new_design_looks_cool_b">The new design looks cool,b...</string>
    <string name="sounds_good">Sounds good 😂😂😂</string>
    <string name="andrewww">andrewww_</string>
    <string name="see_you_on_the_next_meeting">See you on the next meeting!</string>
    <string name="martini_rond">martini_rond</string>
    <string name="i_heard_this_is_a_good_movie">I heard this is a good movie,s...</string>
    <string name="hello">Hello</string>
    <string name="message">Message...</string>
    <string name="mother">Mother ❤️</string>
    <string name="_03_12">03:12</string>
    <string name="karennne_liked_3_posts"><b>karennne</b> liked 3 posts.</string>
    <string name="kiero_d_zackjohn_and_craig_love_liked_joshua_i_photo">kiero_d, zackjohn and craig_love liked joshua_I photo.</string>
    <string name="_3h">3h</string>
    <string name="maxjacobson_liked_3_posts"><b>maxjacobson</b> liked 3 posts.</string>
    <string name="following">Following</string>
    <string name="you">You</string>
    <string name="kiero_d_zackjohn">kiero_d, zackjohn</string>
    <string name="licked">licked</string>
    <string name="photo">photo.</string>
    <string name="s_post">\'s post.</string>
    <string name="liked">liked</string>
    <string name="martini_rond_s">martini_rond\'s</string>
    <string name="comment">comment:</string>
    <string name="martini_rondat">\@martini_rond</string>
    <string name="nice">Nice!</string>
    <string name="_8_posts">8 posts.</string>
    <string name="started">started</string>
    <string name="craig_love_">craig_love.</string>
    <string name="s_post_">\'s post.</string>
    <string name="follow_requests">Follow Requests</string>
    <string name="new_text">New</string>
    <string name="your">your</string>
    <string name="today">Today</string>
    <string name="jacob_w_atrate">\@jacob_w</string>
    <string name="exactly">exactly..</string>
    <string name="star_emoji">💫.</string>
    <string name="_2d">2d</string>
    <string name="reply">Reply</string>
    <string name="you_small">you.</string>
    <string name="message1">Message</string>
    <string name="mis_potter">mis_potter</string>
    <string name="_3d">3d</string>
    <string name="m_humphrey">m_humphrey</string>
    <string name="_1h">1h</string>
    <string name="_26_others">26 others</string>
    <string name="this_week">This Week</string>
    <string name="mentioned">mentioned</string>
    <string name="you_in_a">you in a</string>
    <string name="following_small">following</string>
    <string name="this_month">This Month</string>
    <string name="_1_3">1/3</string>
    <string name="_44_686_others">44,686 others</string>
    <string name="artist_song_title"><b>Artist</b> • Song Title</string>
    <string name="activity">Activity</string>
    <string name="digital_goodies_designer">Digital goodies designer</string>
    <string name="jacob_west">Jacob West</string>
    <string name="pixsellz">\@pixsellz</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="everything_is_designed">Everything is designed.</string>
    <string name="design">Design</string>
    <string name="sport">Sport</string>
    <string name="friends">Friends</string>
    <string name="done">Done</string>
    <string name="switch_to_professional_account">Switch to Professional Account</string>
    <string name="phone">Phone</string>
    <string name="_1_202_555_0147">+1 202 555 0147</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="next">Next</string>
    <string name="recents">Recents</string>
    <string name="cancel">Cancel</string>
    <string name="send_message">Send Message</string>
</resources>