<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/brown"
        android:orientation="vertical"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:weightSum="10"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center"
                >

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/back_arrow"
                    />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/socially_text"
                    android:id="@+id/socially_text"
                    android:textColor="@color/white"
                    android:textSize="48sp"
                    android:fontFamily="@font/montserrat_medium"
                    android:letterSpacing="-0.05"
                    android:layout_marginHorizontal="60dp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="9"
                android:orientation="vertical"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_an_account_and_sign_up"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:fontFamily="@font/montserrat_medium"

                    />
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/camera_icon"
                    app:civ_border_width="2dp"
                    app:civ_border_color="#FF000000"/>


            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="7"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user123"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/montserrat_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff"
                android:hint="@string/john"
                />
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/your_last_name"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff"
                android:hint="@string/doe"/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff"
                android:hint="@string/_20_05_2005"/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_medium"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff"
                android:hint="@string/johndoe_gmail_com"/>
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_medium"/>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#80ffffff"
                app:hintTextColor="#80ffffff"
                app:boxStrokeColor="#ffffff"
               >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textColorHint="#80ffffff"
                android:inputType="textPassword"
                />
            </com.google.android.material.textfield.TextInputLayout>



<!--        <Button-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->


<!--                android:paddingHorizontal="50dp"-->
<!--                android:paddingVertical="20dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:textColor="#000000"-->
<!--                android:text="@string/create_an_account"-->

<!--                />-->
<!--            <com.google.android.material.button.MaterialButton-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:backgroundTint="#80ffffff"-->
<!--                android:cornerRadius="5dp"-->
<!--                android:paddingHorizontal="50dp"-->
<!--                android:paddingVertical="20dp"-->
<!--                android:layout_marginTop="10dp"-->
<!--                android:textColor="#000000"-->
<!--                android:text="@string/create_an_account"-->

<!--                />-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="60dp"
                app:cornerRadius="5dp"
                android:backgroundTint="#30ffffff"
                android:text="@string/create_an_account"
                android:padding="10dp"
                android:textColor="#80ffffff"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                >

            </com.google.android.material.button.MaterialButton>
        </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>