<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Editprofile">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:layout_editor_absoluteX="-28dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:id="@+id/topNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/offwhite"
            android:padding="10dp">

            <TextView
                android:id="@+id/canceltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="Cancel"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/editprofiletext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="110dp"
                android:layout_toRightOf="@+id/canceltext"
                android:text="@string/edit_profile"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/donetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/done"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/pfp_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topNav"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/profilepic" />

            <TextView
                android:id="@+id/changeprofilephoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Change Profile Photo"
                android:textColor="@color/brown"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/personalinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pfp_section"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey">

            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="Name"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/jacob_west"
                    android:textColor="@color/black">

                </EditText>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/jacob_w"
                    android:textColor="@color/black">

                </EditText>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:text="Website"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:hint="Website"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey">

                </EditText>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="Bio"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <RelativeLayout
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true">

                    <TextView
                        android:id="@+id/bio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/digital_goodies_designer"
                        android:textColor="@color/black"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/bio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginTop="10dp"
                        android:layout_toRightOf="@+id/bio1"
                        android:text="@string/pixsellz"
                        android:textColor="@color/brown"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/bio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/bio1"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/everything_is_designed"
                        android:textColor="@color/black"
                        android:textSize="18dp" />
                </RelativeLayout>

            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey">

            </View>
        </LinearLayout>
        <TextView
            android:id="@+id/professional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personalinfo"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:text="@string/switch_to_professional_account"
            android:textColor="@color/brown"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"/>
        <TextView
            android:id="@+id/privateinformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/professional"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:text="Private Information"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"

            android:layout_marginStart="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/privateinformation">
            <RelativeLayout
                android:id="@+id/privateinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="Email"
                    android:textColor="@color/black"
                    android:textSize="18dp" />

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="jacob.west@gmail.com"
                    android:textColor="@color/black">

                </EditText>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_marginStart="20dp"/>

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/_1_202_555_0147"
                    android:textColor="@color/black">

                </EditText>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/gender"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:layout_marginStart="20dp"/>

                <EditText
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/male"
                    android:textColor="@color/black">

                </EditText>

            </RelativeLayout>
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>